[package]
name = "can2mqtt"
version = "3.0.0"
edition = "2024"

[dependencies]
can-socket = { version="0.3.5", features = ["tokio"]}
rumqttc = "0.24.0"
bytes = "1.10.1"
hex = "0.4.3"
bitvec = "1.0.1"
csv = "1.3.1"
serde = {version = "1.0.219", features = ["serde_derive"]}
inotify = "0.11.0"
notify = "8.1.0"
tokio = {version="1.47.0", features =["rt-multi-thread"]}
tokio-stream = "0.1.17"
ctflag = "0.1.2"
log = "0.4.27"
stderrlog = "0.6.0"
url = "2.5.4"
